fixes #7434 - Setting descriptions are shown without wrapping

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -312,7 +312,9 @@ table tr td:last-child {
     float:none;
   }
 
-  white-space: nowrap;
+  .btn-group {
+    white-space: nowrap;
+  }
 }
 
 .nbsp {
